--- a/Coffee Machine/Keep track of the supplies/task-info.yaml
+++ b/Coffee Machine/Keep track of the supplies/task-info.yaml
@@ -484,29 +484,6 @@ files:
         }
     }
   learner_created: true
-- name: src/specifications/StringInputSpecification.java
-  visible: true
-  text: |
-    package specifications;
-
-    import java.util.List;
-
-    public record StringInputSpecification(String inputMessage, String invalidValueMessage, List<String> possibleValues) {
-        @Override
-        public String inputMessage() {
-            return inputMessage;
-        }
-
-        @Override
-        public String invalidValueMessage() {
-            return invalidValueMessage;
-        }
-
-        public boolean fitsSpecification(String value){
-            return possibleValues.stream().anyMatch(value::equals);
-        }
-    }
-  learner_created: true
 - name: src/controllers/cookers/impl/WaterTaker.java
   visible: true
   text: |
@@ -542,28 +519,6 @@ files:
         public void fillSupply(Machine coffeeMachine) {
             int value = ConsoleReader.readInteger(specification);
             coffeeMachine.addMilk(value);
-        }
-    }
-  learner_created: true
-- name: src/specifications/IntegerInputSpecification.java
-  visible: true
-  text: |
-    package specifications;
-
-    public record IntegerInputSpecification(String inputMessage, String invalidValueMessage, int maxValue, int minValue) {
-
-        @Override
-        public String inputMessage() {
-            return inputMessage;
-        }
-
-        @Override
-        public String invalidValueMessage() {
-            return invalidValueMessage;
-        }
-
-        public boolean fitsSpecification(int value) {
-            return value >= minValue && value <= maxValue;
         }
     }
   learner_created: true
@@ -625,48 +580,6 @@ files:
         }
 
         public abstract CoffeeRecipe getRecipe();
-    }
-  learner_created: true
-- name: src/controllers/processors/impl/MakeCoffeeProcessor.java
-  visible: true
-  text: |
-    package controllers.processors.impl;
-
-    import controllers.cookers.ICoffeeCooker;
-    import models.CoffeeRecipe;
-    import models.Machine;
-    import controllers.processors.ICoffeeMachineProcessor;
-    import models.RecipeProvider;
-    import utils.ConsoleReader;
-    import utils.Constants;
-
-    import java.util.List;
-
-    public class MakeCoffeeProcessor implements ICoffeeMachineProcessor {
-
-        private final List<ICoffeeCooker> cookers;
-
-        public MakeCoffeeProcessor(List<ICoffeeCooker> cookers) {
-            this.cookers = cookers;
-        }
-
-        @Override
-        public String getOperationTitle() {
-            return "buy";
-        }
-
-        @Override
-        public void execute(Machine coffeeMachine) {
-            RecipeProvider coffee = RecipeProvider.fromNumber(ConsoleReader.readInteger(Constants.RECIPE_SPECIFICATION));
-            CoffeeRecipe recipe = coffee.getRecipe();
-            if (coffeeMachine.canMakeCoffee(recipe)) {
-                for (ICoffeeCooker cooker : cookers) {
-                    cooker.makeCoffee(coffeeMachine, recipe);
-                }
-            } else {
-                System.out.println("I can`t make this cup: not enough supplies");
-            }
-        }
     }
   learner_created: true
 - name: src/controllers/cookers/impl/CupsTaker.java
@@ -966,40 +879,77 @@ files:
 - name: src/utils/IInputValidator.java
   visible: true
   learner_created: true
+- name: src/controllers/processors/impl/BuyCoffeeProcessor.java
+  visible: true
+  text: |
+    package controllers.processors.impl;
+
+    import controllers.cookers.ICoffeeCooker;
+    import models.CoffeeRecipe;
+    import models.Machine;
+    import controllers.processors.ICoffeeMachineProcessor;
+    import models.RecipeProvider;
+    import utils.ConsoleReader;
+    import utils.Constants;
+
+    import java.util.List;
+
+    public class MakeCoffeeProcessor implements ICoffeeMachineProcessor {
+
+        private final List<ICoffeeCooker> cookers;
+
+        public MakeCoffeeProcessor(List<ICoffeeCooker> cookers) {
+            this.cookers = cookers;
+        }
+
+        @Override
+        public String getOperationTitle() {
+            return "buy";
+        }
+
+        @Override
+        public void execute(Machine coffeeMachine) {
+            RecipeProvider coffee = RecipeProvider.fromNumber(ConsoleReader.readInteger(Constants.RECIPE_SPECIFICATION));
+            CoffeeRecipe recipe = coffee.getRecipe();
+            if (coffeeMachine.canMakeCoffee(recipe)) {
+                for (ICoffeeCooker cooker : cookers) {
+                    cooker.makeCoffee(coffeeMachine, recipe);
+                }
+            } else {
+                System.out.println("I can`t make this cup: not enough supplies");
+            }
+        }
+    }
+  learner_created: true
+- name: src/specifications/InputSpecification.java
+  visible: true
+  text: |
+    package specifications;
+
+    import java.util.List;
+
+    public record StringInputSpecification(String inputMessage, String invalidValueMessage, List<String> possibleValues) {
+        @Override
+        public String inputMessage() {
+            return inputMessage;
+        }
+
+        @Override
+        public String invalidValueMessage() {
+            return invalidValueMessage;
+        }
+
+        public boolean fitsSpecification(String value){
+            return possibleValues.stream().anyMatch(value::equals);
+        }
+    }
+  learner_created: true
+- name: src/specifications/IntegerInputSpecification.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5333#comment
-status: Failed
+status: Solved
 feedback:
-  message: |-
-    Error in test #7
-
-    Program ran out of input. You tried to read more than expected.
-
-    Please find below the output of your program during this failed test.
-    Note that the &#39;&gt;&#39; character indicates the beginning of the input line.
-
-    ---
-
-    Write action (fill, buy, take, remaining, exit):
-    &gt; remaining
-
-    The coffee machine has:
-    400 ml of water
-    540 ml of milk
-    120 g of coffee beans
-    9 disposable cups
-    $550 of money
-
-    Write action (fill, buy, take, remaining, exit):
-    &gt; buy
-    What do you want to buy? 1 - espresso, 2 - latte, 3 - cappuccino :
-    &gt; back
-    No such recipe
-    What do you want to buy? 1 - espresso, 2 - latte, 3 - cappuccino :
-    &gt; remaining
-    No such recipe
-    What do you want to buy? 1 - espresso, 2 - latte, 3 - cappuccino :
-    &gt; exit
-    No such recipe
-    What do you want to buy? 1 - espresso, 2 - latte, 3 - cappuccino :
-  time: Thu, 15 Sep 2022 16:29:15 UTC
-record: -1
+  message: Congratulations!
+  time: Fri, 16 Sep 2022 09:39:56 UTC
+record: 5
